--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,9 @@
     </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="false" />
 
-        </activity>
+
     </application>
 
 </manifest>
